Fixed Namespace and AssemblyName
Fix for release OutputPath

--- a/CubeAndTiles/CubeAndTiles.csproj
+++ b/CubeAndTiles/CubeAndTiles.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{FFDF307D-146B-4365-B410-A05FAEE3A337}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Engine</RootNamespace>
-    <AssemblyName>Engine</AssemblyName>
+    <RootNamespace>Examples.CubeAndTiles</RootNamespace>
+    <AssemblyName>CubeAndTiles</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <UseVSHostingProcess>false</UseVSHostingProcess>
   </PropertyGroup>
@@ -27,7 +27,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
