--- a/Fusee_Windows.targets
+++ b/Fusee_Windows.targets
@@ -3,41 +3,41 @@
   <!-- Reference all the dlls! -->
   <ItemGroup>
     <Reference Include="Fusee.Engine.Common">
-      <HintPath>..\lib\Fusee.Engine.Common.dll</HintPath>
+      <HintPath>..\..\lib\Fusee.Engine.Common.dll</HintPath>
     </Reference>
     <Reference Include="Fusee.Engine.Core">
-      <HintPath>..\lib\Fusee.Engine.Core.dll</HintPath>
+      <HintPath>..\..\lib\Fusee.Engine.Core.dll</HintPath>
     </Reference>
     <Reference Include="Fusee.Engine.Imp.NAudio">
-      <HintPath>..\lib\Fusee.Engine.Imp.NAudio.dll</HintPath>
+      <HintPath>..\..\lib\Fusee.Engine.Imp.NAudio.dll</HintPath>
     </Reference>
     <Reference Include="Fusee.Engine.Imp.OpenTK">
-      <HintPath>..\lib\Fusee.Engine.Imp.OpenTK.dll</HintPath>
+      <HintPath>..\..\lib\Fusee.Engine.Imp.OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="Fusee.Math.Core">
-      <HintPath>..\lib\Fusee.Math.Core.dll</HintPath>
+      <HintPath>..\..\lib\Fusee.Math.Core.dll</HintPath>
     </Reference>
     <Reference Include="Fusee.SceneManagement.SceneManagement">
-      <HintPath>..\lib\Fusee.SceneManagement.SceneManagement.dll</HintPath>
+      <HintPath>..\..\lib\Fusee.SceneManagement.SceneManagement.dll</HintPath>
     </Reference>
     <Reference Include="JSIL.Meta">
-      <HintPath>..\lib\JSIL.Meta.dll</HintPath>
+      <HintPath>..\..\lib\JSIL.Meta.dll</HintPath>
     </Reference>
     <Reference Include="OpenTK">
-      <HintPath>..\lib\OpenTK.dll</HintPath>
+      <HintPath>..\..\lib\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="sfmlNET.Audio">
-      <HintPath>..\lib\sfmlNET.Audio.dll</HintPath>
+      <HintPath>..\..\lib\sfmlNET.Audio.dll</HintPath>
     </Reference>
   </ItemGroup>
   
   <!-- BeforeBuild on Windows -->
   <Target Name="BeforeBuild" Condition=" '$(OS)' == 'Windows_NT' ">
-    <Copy SourceFiles="$(ProjectDir)..\lib\csfml-audio-2.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
-    <Copy SourceFiles="$(ProjectDir)..\lib\libmpg123-0.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
-    <Copy SourceFiles="$(ProjectDir)..\lib\libsndfile-1.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
-    <Copy SourceFiles="$(ProjectDir)..\lib\openal32.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
-    <Copy SourceFiles="$(ProjectDir)..\lib\OpenTK.GLControl.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
+    <Copy SourceFiles="$(ProjectDir)..\..\lib\csfml-audio-2.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
+    <Copy SourceFiles="$(ProjectDir)..\..\lib\libmpg123-0.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
+    <Copy SourceFiles="$(ProjectDir)..\..\lib\libsndfile-1.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
+    <Copy SourceFiles="$(ProjectDir)..\..\lib\openal32.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
+    <Copy SourceFiles="$(ProjectDir)..\..\lib\OpenTK.GLControl.dll" DestinationFolder="$(TargetDir)" ContinueOnError="true" />
   </Target>
   
   <!--- AfterBuild on Windows -->
