--- a/projects/CubeAndTiles/CubeAndTiles.csproj
+++ b/projects/CubeAndTiles/CubeAndTiles.csproj
@@ -47,6 +47,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+	<Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Anaglyph3D.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="Level.cs" />
